--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Simple web storage service.">
     <title>Cloud disk</title>
   </head>
   <body>
